--- a/.env
+++ b/.env
@@ -29,8 +29,9 @@ DATABASE_URL=mysql://root:@database:3306/recipes
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle  composer require nelmio/cors-bundle###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 
 ###Allow anyone to access the apis.
-##CORS_ALLOW_ORIGIN=^https?://.*?$
+CORS_ALLOW_ORIGIN=^.*$
+
 ###< nelmio/cors-bundle ###
