--- a/config/services.yaml
+++ b/config/services.yaml
@@ -50,3 +50,7 @@ services:
             - !php/const Monolog\Logger::ERROR
 
         # ...
+    app.http_kernel.cors_subscriber:
+        class: App\EventListener\HttpKernel\CorsSubscriber
+        tags:
+            - { name: kernel.event_subscriber }
