--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "friendsofsymfony/rest-bundle": "^3.0",
+        "justinrainbow/json-schema": "^5.2",
         "nelmio/cors-bundle": "^2.1",
         "symfony/cache": "5.2.*",
         "symfony/console": "5.2.*",
@@ -24,6 +25,7 @@
         "symfony/property-access": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/serializer": "5.2.*",
+        "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
