--- a/.env
+++ b/.env
@@ -27,3 +27,9 @@ APP_SECRET=1ee601c11d618150ea70ecf96d295ec1
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 DATABASE_URL=mysql://root:@database:3306/recipes
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=semaphore
+###< symfony/lock ###
