--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://root:@localhost:3306/recipes
 ###> symfony/lock ###
 # Choose one of the stores below
 # postgresql+advisory://db_user:db_password@localhost/db_name
-LOCK_DSN=semaphore
+LOCK_DSN=flock
 ###< symfony/lock ###
