add filtered get all recipes

--- a/.env
+++ b/.env
@@ -33,3 +33,12 @@ DATABASE_URL=mysql://root:@localhost:3306/recipes
 # postgresql+advisory://db_user:db_password@localhost/db_name
 LOCK_DSN=flock
 ###< symfony/lock ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail+smtp://email@gmail.com:password@default
+###< symfony/google-mailer ###
