--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,13 @@
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/google-mailer": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/property-access": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/rate-limiter": "5.2.*",
         "symfony/serializer": "5.2.*",
+        "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
