--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ LOCK_DSN=flock
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail+smtp://email@gmail.com:password@default
+MAILER_DSN=smtp://USERNAME:PASSWORD@smtp.gmail.com:465?verify_peer=0
 ###< symfony/google-mailer ###
